# beginning-rust

./: Cargo.toml
docs/: NOTE.md
src/: algorithm_search.rs  basc_syntax.rs  closure.rs  closure_2.rs  debug_trait.rs  default_trait.rs  derive.rs  display_trait.rs  iter.rs  lifetime.rs  main.rs  partial_eq.rs  section_05.rs  section_07.rs  summarize.rs  test_target.rs  traits.rs  vers.rs  web.rs
