[package]
name = "beginning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
csv = "1.2.1"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"